---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: ????
  Changes:
    - standardized code formatting
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 09MAY2022
  Changes:
    - alt-mode is now persistent and won't be turned off when starting new cutscenes
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2021-01-29
  Changes:
    - added support for setting transition time, waiting time, and zoom individually for each waypoint (see mod portal page for documentation)
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2021-01-15
  Changes:
    - fixed that under certain conditions the mod interface function would not return the correct cutscene state
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2021-01-09
  Changes:
    - updated for factorio version 1.1
    - minor change to how player entity is handled within the script
    - removed function to sync player and character color since cutscene_character now exists
    - fixed crash when calling /cutscene with no waypoints
    - fixed crash when providing waypoint coordinates which included an invalid surface
    - added changelog
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2020-10-30
  Changes:
    - initial release on mod portal