@@ -7,3 +7,13 @@ cc-zoom=Zoom
 cc-transition-time=The time it takes the camera to pan from one position to the next. Measured in ticks (60 ticks = 1 second)
 cc-time-wait=How long the camera waits before it moves to the next position. Measured in ticks (60 ticks = 1 second)
 cc-zoom=The camera's zoom level
+
+[cc-messages]
+wait-thats-illegal=[color=blue]Wait. That's illegal.[/color]
+invalid-no-waypoints=Invalid waypoints: cutscene must have at least one waypoint or target. Shift-click on the map or a train to add a waypoint when constructing the command.
+invalid-no-target=Invalid waypoints: train or station does not exist
+invalid-coordinates=Error 404: coordinates not found
+invalid-no-transition-time=Invalid waypoints: one or more waypoints is missing transition time
+invalid-no-wait-time=Invalid waypoints: one or more waypoints is missing waiting time
+invalid-waypoints-error-message=Invalid waypoints: __1__
+invalid-waypoints=Invalid waypoints
